修复JEI和帕秋莉界面，删除旧混凝土配方，小修改
- 前二修改如题
- 迁移了持物生物转化配方的物品输入
- 为BlockStatePredicate和ItemIngredientPredicate添加了仅渲染使用的转化为BlockState/ItemStack的方法
- 为部分带有HasCauldronSimple字段的配方添加了isConsumeFluid、isProduceFluid和isFromWater三个方法（有些没有三个全添加，仅添加了在渲染时使用到的）
- 修复了树叶转树苗的配方生成未迁移导致无法进入世界的问题